--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 
       <div id="map"></div>
 
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type"text/javascript"></script>
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
       <script src="js/map.js" type="text/javascript"></script>
 
+      <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
       <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places,drawing,geometry&v=3&region=GB&callback=init">
 	  </script>
