--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       <!-- <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
       <link rel="stylesheet" href="css/style.css" type="text/css">
-
   </head>
   <body>
       <h1>Search a location to view</h1>
@@ -19,12 +18,22 @@
           <button type="button" form="form-container" id="search-btn">Search!</button>
       </form>
 
+      <div id="knockout-example">
+          <ul data-bind="foreach: crimeData">
+              <li data-bind="text: category"></li>
+          </ul>
+
+          <button data-bind="click: arrayInformation">Array Information</button>
+      </div>
+
+
       <div id="map"></div>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type"text/javascript"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
-      <script src="js/map.js" type="text/javascript"></script>
 
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type"text/javascript"></script>
+      <script src="js/map.js" type="text/javascript"></script>
+      <script src="js/viewmodel.js" type="text/javascript"></script>
       <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
       <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places,drawing,geometry&v=3&region=GB&callback=init">
