--- a/index.html
+++ b/index.html
@@ -18,10 +18,20 @@
           <button type="button" form="form-container" id="search-btn">Search!</button>
       </form>
 
-      <div id="knockout-example">
-          <ul data-bind="foreach: crimeData">
-              <li data-bind="text: category"></li>
+      <div id="knockout-example data-bind="with:currentCrime"">
+          <ul data-bind="foreach: crimeList">
+              <li data-bind="text: category, click: $parent.viewCrime"></li>
           </ul>
+
+          <p>
+              Category:
+              <select data-bind="options: crimeList"></select>
+          </p>
+
+          <p>
+              Multiple Select:
+              <select data-bind="options: crimeList" size="5" multiple="true"></select>
+          </p>
 
           <button data-bind="click: arrayInformation">Array Information</button>
       </div>
