--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
       <meta name="description" content="Project Neighbourhood">
       <!-- <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
+      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
       <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
+
       <h1>Search a location to view</h1>
       <form id="form-container" class="form-container">
           <label for="location">Location:
@@ -32,10 +34,29 @@
           <button data-bind="click: arrayInformation">Array Information</button>
 
           <button data-bind="click: getCrimes">Add to last 5 searches</button>
+
+          <button data-bind="click: getCrimes2">Get Crimes</button>
+
+          <button data-bind="click: addMarkers">Add Markers</button>
       </div>
 
+      <p>Lat: <strong data-bind="text: lat"></strong></p>
+      <p>Lng: <strong data-bind="text: lng"></strong></p>
 
-      <div id="map"></div>
+      <!-- add longitude and latitude
+      <div id="knockout-example data-bind="with:crimeResults"">
+          <ul data-bind="foreach: crimeResults">
+              <li data-bind="text: location.latitude + location.longitude, click: $parent.viewCrime"></li>
+          </ul>
+      </div> -->
+
+
+       <div id="map"></div>
+
+       <i class="material-icons">home</i>
+
+       <i class="material-icons">cloud</i>
+       <i class="material-icons">delete</i>
 
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
