--- a/index.html
+++ b/index.html
@@ -11,73 +11,60 @@
       <link rel="stylesheet" href="css/style.css" type="text/css">
   </head>
   <body>
-      <div class="container">
-          <div class="left">
-              <h1>Search a location to view</h1>
-              <form id="form-container" class="form-container">
-                  <label for="location">Location:
-                      <input type="text" id="location" value="" placeholder="Enter a location" data-bind="value: locationName" >
-                  </label>
-                  <button type="button" form="form-container" id="search-btn">Search!</button>
-              </form>
+      <nav id="drawer" class="dark_blue">
+          <h2 class="title">Search a location to view</h2>
+          <p>Click outside the panel to close</p>
 
-              <p data-bind="visible: last5Searches().length > 0">
-                  last 5 searches:
-                  <select data-bind="options: last5Searches(), visible: last5Searches().length > 0"></select>
-              </p>
+          <form id="form-container" class="form-container">
+              <label for="location">Location:
+                  <input type="text" id="location" value="" placeholder="Enter a location" data-bind="value: locationName" >
+              </label>
+              <button type="button" form="form-container" id="search-btn">Search!</button>
+          </form>
 
-              <button data-bind="click: lastFive">Add to last 5 searches</button>
-              <button data-bind="click: getCrimes">Get Crimes</button>
-              <button data-bind="click: addMarkers">Add Markers</button>
+          <p data-bind="visible: last5Searches().length > 0">
+              last 5 searches:
+              <select data-bind="options: last5Searches(), visible: last5Searches().length > 0"></select>
+          </p>
 
-              <div id="knockout-example data-bind="with:Crime"">
-                  <!--
-                  <ul data-bind="foreach: crimeList">
-                      <li data-bind="text: category, click: $parent.viewCrime"></li>
-                  </ul> -->
+          <button data-bind="click: lastFive">Add to last 5 searches</button>
+          <button data-bind="click: getCrimes">Get Crimes</button>
+          <button data-bind="click: addMarkers">Add Markers</button>
+          <button data-bind="click: uniqueCategories">Unique</button>
 
-                  <!-- only visible if user has searched for a location -->
+          <p>
+              Choose a category:
+              <select data-bind="options: crimeResults,
+                        optionsText: 'category',
+                        value: selectedCategory,
+                        optionsCaption: 'Choose...'">
+            </select>
+        </p>
 
-              </div> <!-- knockout div -->
+        <p>
+          <ul data-bind="foreach: crimeResults">
+              <li data-bind="text: category"></li>
+          </ul>
+      </nav>
 
-              <p>
-                  Choose a category:
-                  <select data-bind="options: crimeResults,
-                            optionsText: 'category',
-                            value: selectedCategory,
-                            optionsCaption: 'Choose...'">
-                </select>
-            </p>
-
-            <p>
-              <ul data-bind="foreach: crimeResults">
-                  <li data-bind="text: category"></li>
-              </ul>
-
-          </div> <!-- left div -->
-
-          <div class="right">
-                <div id="map"></div>
-          </div> <!-- right div -->
-      </div> <!-- container div -->
-
-      <p>Lat: <strong data-bind="text: lat"></strong></p>
-      <p>Lng: <strong data-bind="text: lng"></strong></p>
+      <main class="light_blue">
+      <a id="menu">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z"/>
+        </svg>
+      </a>
+      <div id="map"></div>
+    </main>
 
       <!-- add longitude and latitude
+      <p>Lat: <strong data-bind="text: lat"></strong></p>
+      <p>Lng: <strong data-bind="text: lng"></strong></p>
       <div id="knockout-example data-bind="with:crimeResults"">
           <ul data-bind="foreach: crimeResults">
               <li data-bind="text: location.latitude + location.longitude, click: $parent.viewCrime"></li>
           </ul>
       </div> -->
 
-
-
-
-       <i class="material-icons">home</i>
-
-       <i class="material-icons">cloud</i>
-       <i class="material-icons">delete</i>
 
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
