Feat: markers bounce on click

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <button data-bind="click: getCrimes">Get Crimes</button>
           <button data-bind="click: addMarkers">Add Markers</button>
           <button data-bind="click: uniqueCategories">Unique</button>
+          <button data-bind="click: knockoutSearch">knockoutSearch</button>
 
           <p>
               Choose a category:
