--- a/index.html
+++ b/index.html
@@ -1,63 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>UK Crime Statistics by Location</title>
-      <meta name="description" content="Project Neighbourhood">
-      <!-- <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>UK Crime Statistics by Location</title>
+    <meta name="description" content="Project Neighbourhood">
+    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
       <link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css"> -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <link rel="stylesheet" href="css/style.css" type="text/css">
-  </head>
-  <body>
-      <nav id="drawer" class="dark_blue">
-          <h2 class="title">Search a location to view</h2>
-          <p>Click outside the panel to close</p>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="css/normalise.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
-          <form id="form-container" class="form-container">
-              <label for="location">Location:
-                  <input type="text" id="location" value="" placeholder="Enter a location" data-bind="value: locationName" >
-              </label>
-              <button type="button" form="form-container" id="search-btn">Search!</button>
-          </form>
+<body>
+    <nav id="drawer" class="dark_blue">
+        <a id="menu-close">
+            <svg viewbox="0 0 40 40">
+                <path class="close-x" d="M 10,10 L 30,30 M 30,10 L 10,30" />
+            </svg>
+        </a>
 
-          <p data-bind="visible: last5Searches().length > 0">
-              last 5 searches:
-              <select data-bind="options: last5Searches(), visible: last5Searches().length > 0"></select>
-          </p>
+        <h2 class="title">Search a location to view</h2>
+        <form id="form-container" class="form-container">
+            <label for="location">
+                <input type="text" id="location" value="" placeholder="Enter a location" data-bind="value: locationName" class="location-input">
+            </label>
+            <button type="button" form="form-container" id="search-btn" class="seach-button">Search!</button>
+        </form>
 
-          <button data-bind="click: lastFive">Add to last 5 searches</button>
-          <button data-bind="click: getCrimes">Get Crimes</button>
-          <button data-bind="click: addMarkers">Add Markers</button>
-          <button data-bind="click: uniqueCategories">Unique</button>
-          <button data-bind="click: knockoutSearch">knockoutSearch</button>
+        <p data-bind="visible: last5Searches().length > 0">
+            last 5 searches:
+            <select data-bind="options: last5Searches(), visible: last5Searches().length > 0"></select>
+        </p>
 
-          <p>
-              Choose a category:
-              <select data-bind="options: crimeResults,
-                        optionsText: 'category',
-                        value: selectedCategory,
-                        optionsCaption: 'Choose...'">
+        <button data-bind="click: lastFive">Add to last 5 searches</button>
+        <button data-bind="click: getCrimes">Get Crimes</button>
+        <button data-bind="click: addMarkers">Add Markers</button>
+        <button data-bind="click: uniqueCategories">Unique</button>
+        <button data-bind="click: knockoutSearch">knockoutSearch</button>
+
+        <p>
+            Choose a category:
+            <select data-bind="options: crimeResults,
+                            optionsText: 'category',
+                            value: selectedCategory,
+                            optionsCaption: 'Choose...'">
             </select>
         </p>
 
         <p>
-          <ul data-bind="foreach: crimeResults">
-              <li data-bind="text: category"></li>
-          </ul>
-      </nav>
+            <ul data-bind="foreach: crimeResults">
+                <li data-bind="text: category"></li>
+            </ul>
+        </p>
 
-      <main class="light_blue">
-      <a id="menu">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-          <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z"/>
-        </svg>
-      </a>
-      <div id="map"></div>
+
+        <div id="crime-details" data-bind="with:currentCrime">
+            <h2 data-bind="text: category"></h2>
+            <h3 data-bind="text: location"></h3>
+        </div>
+
+    </nav>
+
+    <main class="light_blue">
+        <a id="menu">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path d="M2 6h20v3H2zm0 5h20v3H2zm0 5h20v3H2z" />
+            </svg>
+        </a>
+        <div id="map"></div>
     </main>
 
-      <!-- add longitude and latitude
+    <!-- add longitude and latitude
       <p>Lat: <strong data-bind="text: lat"></strong></p>
       <p>Lng: <strong data-bind="text: lng"></strong></p>
       <div id="knockout-example data-bind="with:crimeResults"">
@@ -66,16 +81,14 @@
           </ul>
       </div> -->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type "text/javascript"></script>
+    <script src="js/map.js" type="text/javascript"></script>
+    <script src="js/viewmodel.js" type="text/javascript"></script>
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places,drawing,geometry&v=3&region=GB&callback=init">
+    </script>
 
+</body>
 
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type"text/javascript"></script>
-      <script src="js/map.js" type="text/javascript"></script>
-      <script src="js/viewmodel.js" type="text/javascript"></script>
-      <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-      <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places,drawing,geometry&v=3&region=GB&callback=init">
-	  </script>
-
-  </body>
 </html>
