--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <h4 data-bind="text: category"></h4>
             <h4 data-bind="text: id"></h4>
             <div data-bind="foreach: location">
-                <li <span data-bind="text: $data"></span>/li>
+                <li <span data-bind="text: $data">
+                    </span>/li>
             </div>
             <h4 data-bind="text: location().street"></h4>
         </div>
@@ -80,15 +81,6 @@
         </a>
         <div id="map"></div>
     </main>
-
-    <!-- add longitude and latitude
-      <p>Lat: <strong data-bind="text: lat"></strong></p>
-      <p>Lng: <strong data-bind="text: lng"></strong></p>
-      <div id="knockout-example data-bind="with:crimeResults"">
-          <ul data-bind="foreach: crimeResults">
-              <li data-bind="text: location.latitude + location.longitude, click: $parent.viewCrime"></li>
-          </ul>
-      </div> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type "text/javascript"></script>
