--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>UK Crime Statistics by Location</title>
-    <meta name="description" content="Project Neighbourhood">
-    <link rel="stylesheet" href="css/normalise.css">
-    <link rel="stylesheet" href="css/style.css">
+   <meta name="viewport" content="width=device-width,initial-scale=1">
+   <title>UK Crime Statistics by Location</title>
+   <meta name="description" content="Project Neighbourhood">
+   <link rel="stylesheet" href="css/normalise.css">
+   <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
+
     <nav id="drawer" class="dark_blue">
         <a id="menu-close">
             <svg viewbox="0 0 40 40">
@@ -19,57 +18,48 @@
         </a>
 
         <h2 class="title">Search a location to view</h2>
-        <form id="form-container" class="form-container">
-            <label for="location">
-                <input type="text" id="location" value="" placeholder="Enter a location" data-bind="value: locationName" class="location-input">
-            </label>
-            <button type="button" form="form-container" id="search-btn" class="seach-button" data-bind="click: knockoutSearch">Search!</button>
-        </form>
+            <form id="form-container" class="form-container">
+                <label for="location">
+                    <input type="text" id="location" value="" placeholder="Enter a location" data-bind="value: locationName" class="location-input">
+                </label>
+                <button type="button" form="form-container" id="search-btn" class="seach-button" data-bind="click: knockoutSearch">Search!</button>
+            </form>
 
-        <p data-bind="visible: last5Searches().length > 0">
-            last 5 searches:
-            <select data-bind="options: last5Searches(), visible: last5Searches().length > 0"></select>
-        </p>
+            <p data-bind="visible: last5Searches().length > 0">
+                last 5 searches:
+                <select data-bind="options: last5Searches(), visible: last5Searches().length > 0"></select>
+            </p>
 
-        <p>
-            Choose a category:
-            <select data-bind="options: crimeResults,
-                            optionsText: 'category',
-                            value: selectedCategory,
-                            optionsCaption: 'Choose...'">
-            </select>
-        </p>
 
-        <h3> Current Crime </h3>
-        <div data-bind="with: currentCrime">
-            <h4 data-bind="text: category"></h4>
-            <h4 data-bind="text: id"></h4>
-            <div data-bind="foreach: location">
-                <li <span data-bind="text: $data">
-                    </span>/li>
+            <p>
+        	   	Choose a category:
+        	    <select data-bind="options: uniqueCategories,
+                                    value: selectedCategory,
+                                    optionsCaption: 'Choose...'"></select>
+        	</p>
+
+
+
+            <div data-bind="with:currentCrime">
+                <h3 data-bind="text: category"></h3>
+                <h4 data-bind="text: crimeId"></h4>
+                <p data-bind="with: location"> Location:
+                    Latitude: <span data-bind="text: latitude"> </span>,
+                    Longitude: <span data-bind="text: longitude"> </span>
+                </p>
             </div>
-            <h4 data-bind="text: location().street"></h4>
-        </div>
 
-        <h3> Crime List </h3>
-        <p>
-            <ul data-bind="foreach: crimeList">
-                <li data-bind="text: category, click: $parent.setCrime"></li>
+            <ul data-bind="foreach: crimes, visible: crimes().length > 0">
+                <li data-bind="click: $parent.currentCrimeClick, visible: $parent.selectedCategory() === category()">
+                    <p>Cateogry: <strong data-bind="text: category"></strong></p>
+                    <p>ID: <strong data-bind="text: crimeId"></strong></p>
+                    <p>Location: <strong data-bind="text: $parent.latLng"></strong></p>
+                    <p data-bind="with: location"> Location:
+                        Latitude: <span data-bind="text: latitude"> </span>,
+                        Longitude: <span data-bind="text: longitude"> </span>
+                    </p>
+                </li>
             </ul>
-        </p>
-
-        <h3> Crime Results </h3>
-        <p>
-            <ul data-bind="foreach: crimeResults">
-                <li data-bind="text: category"></li>
-            </ul>
-        </p>
-
-
-        <div id="crime-details" data-bind="with:currentCrime">
-            <h2 data-bind="text: category"></h2>
-            <h3 data-bind="text: location"></h3>
-        </div>
 
     </nav>
 
@@ -82,14 +72,12 @@
         <div id="map"></div>
     </main>
 
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type "text/javascript"></script>
-    <script src="js/map.js" type="text/javascript"></script>
-    <script src="js/viewmodel.js" type="text/javascript"></script>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places,drawing,geometry&v=3&region=GB&callback=init">
+    <script src="js/app.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places&v=3&region=GB&callback=init">
     </script>
-
 </body>
-
 </html>
