--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </a>
 
         <div id="container">
-            <h2 class="title">Search a location to view</h2>
+            <h2 class="title">Search a UK location to view</h2>
                 <form id="form-container" class="form-container">
                     <label for="location">
                         <input type="text" id="location" value="" placeholder="Enter a location" data-bind="value: locationName" class="location-input">
@@ -51,7 +51,7 @@
                 </div>
 
 
-                <h3 class="small-title"><strong data-bind="text: listOfCrimes"></strong></h3>
+                <h3 class="small-title">List of Crimes</h3>
                 <ul data-bind="foreach: crimes, visible: crimes().length > 0">
                     <li data-bind="click: $parent.currentCrimeClick, visible: $parent.selectedCategory() === category()">
                         <p>Cateogry: <span data-bind="text: category"></span></p>
@@ -75,9 +75,9 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type "text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js" type="text/javascript"></script>
     <script src="js/app.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places&v=3&region=GB&callback=init">
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJOd4AG-Qdqfl59zODJNUOFO4sGHI4rqU&v=3&libraries=places&v=3&region=GB&callback=init" onerror="mapError()">
     </script>
 </body>
 </html>
